@@ -10,7 +10,8 @@
  * Fixed some shortcomings related to auto indent in lines that started with comments.
  * Changed implementation of editor folding to a newer API. Now the editor can fold non-DDoc comments as well (a previous limitation).
    * Added folding preference page, can now configure the initial state (folded or not) of each folding group.
-   * The folding groups/kinds are now: comments, DDoc comments, module header comments, aggregate types, functions. 
+   * The folding groups/kinds are now: comments, DDoc comments, module header comments, aggregate types, functions.
+ * Fixed minor source range bugs for template references and typeof() references.
 
 == DDT 0.4.2 (2011-04-29) ==
  * Fixed issue #33, bug with spaces in projects names: made all variables in DMD response file resolve to quote escaped values.
